# robot_pga

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: RobotArm.hpp  math_tests.hpp  pga2d.hpp
include/game1/: CatchGame1.hpp  game1_objects.hpp
include/game2/: BaseGame2.hpp  shape2.hpp  traceG2.hpp
include/game3/: PingPongGame.hpp  PingPongGameView.hpp
src/: RobotArm.cpp  math_tests.cpp  pga2d.cpp
src/game1/: CatchGame1.cpp  game1_objects.cpp
src/game2/: BaseGame2.cpp  shape2.cpp  traceG2.cpp
src/game3/: PingPongGame.cpp  PingPongGameView.cpp
tests/: test_game1_logic.cpp  test_pga2d.cpp  test_pingpong_logic.cpp  test_pingpong_view_support.cpp  test_robot_arm.cpp  test_shapes_and_architecture.cpp
